# psi-agent-old

./: pyproject.toml
.github/workflows/: auto-alpha-tag.yml  ci.yml
examples/hermes-style-workspace/: .skills_prompt_snapshot.json  SOUL.md  USER.md  memory.md
examples/hermes-style-workspace/skills/: .curator_report.md  .curator_state.json
examples/hermes-style-workspace/systems/: background_review.py  curator.py  prompt_constants.py  system.py  threat_patterns.py
examples/hermes-style-workspace/tools/: bash.py  computer_use.py  edit.py  execute_code.py  glob_files.py  kanban_show.py  memory.py  pdf.py  session_search.py  skill_manage.py  update_plan.py
examples/openclaw-style-workspace/: .skills_prompt_snapshot.json  AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  memory.md  spin.py
examples/openclaw-style-workspace/reports/: llm-latest-advances-2026.md
examples/openclaw-style-workspace/skills/: .curator_report.md  .curator_state.json
examples/openclaw-style-workspace/systems/: background_review.py  curator.py  prompt_sections.py  system.py  test_scenario_live.py
examples/openclaw-style-workspace/tools/: bash.py  clarify.py  cron.py  edit.py  find.py  flow_manage.py  grep.py  memory.py  memory_read.py  memory_write.py  read.py  session_search.py  skill_manage.py  todo.py  vision_analyze.py  web_fetch.py  web_search.py  write.py
openspec/specs/anthropic-translator-testing/: spec.md
openspec/specs/channel-cli-testing/: spec.md
openspec/specs/channel-documentation/: spec.md
openspec/specs/channel-telegram-testing/: spec.md
openspec/specs/session-config-testing/: spec.md
openspec/specs/session-history-testing/: spec.md
openspec/specs/session-runner-testing/: spec.md
openspec/specs/session-schedule-testing/: spec.md
openspec/specs/session-server-testing/: spec.md
openspec/specs/session-tool-executor-testing/: spec.md
openspec/specs/session-tool-loader-testing/: spec.md
openspec/specs/session-types-testing/: spec.md
openspec/specs/session-workspace-watcher-testing/: spec.md
openspec/specs/workspace-manifest-testing/: spec.md
tests/session/: test_cli.py  test_server.py
tests/workspace/: test_snapshot_api.py
(+91 files in other folders)
