[project]
name = "psi-agent"
dynamic = ["version"]
description = "A portable and componentized agent framework"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE.md" }
authors = [{ name = "Hao Zhang", email = "hzhangxyz@outlook.com" }]
urls = { Repository = "https://github.com/psi-agent/psi-agent", Homepage = "https://github.com/psi-agent/psi-agent", Documentation = "https://github.com/psi-agent/psi-agent#readme" }
dependencies = [
    "aiohttp>=3.13.5",
    "anthropic>=0.97.0",
    "anyio>=4.13.0",
    "croniter>=6.2.2",
    "loguru>=0.7.3",
    "openai>=2.33.0",
    "platformdirs>=4.9.6",
    "prompt-toolkit>=3.0.52",
    "python-telegram-bot>=22.7",
    "tyro>=1.0.13",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[project.optional-dependencies]
socks = ["socksio>=1.0.0"]

[project.scripts]
psi-agent = "psi_agent.__main__:main"
psi-ai-anthropic-messages = "psi_agent.ai.anthropic_messages.cli:main"
psi-ai-openai-completions = "psi_agent.ai.openai_completions.cli:main"
psi-session = "psi_agent.session.cli:main"
psi-channel-cli = "psi_agent.channel.cli.cli:main"
psi-channel-repl = "psi_agent.channel.repl.cli:main"
psi-channel-telegram = "psi_agent.channel.telegram.cli:main"
psi-workspace-pack = "psi_agent.workspace.pack.cli:main"
psi-workspace-unpack = "psi_agent.workspace.unpack.cli:main"
psi-workspace-mount = "psi_agent.workspace.mount.cli:main"
psi-workspace-umount = "psi_agent.workspace.umount.cli:main"
psi-workspace-snapshot = "psi_agent.workspace.snapshot.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psi_agent"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
